# MEPhI-ASM-2Year-2Sem

./: README.md  lab1.s  lab2.s  lab3.s  lab4.c
.github/workflows/: ci.yml
lab1/: Makefile  lab.s
lab2/: Makefile  gdb-scripts.py  lab.s
lab3/: input.txt  lab.s
lab3/assets/: input.txt
lab3/dev/: algorithm.txt
lab4/: Makefile  lab.s  lab4.c
lab4/asm/: Makefile  lab.s
lab4/c/: assembly.c  primitive.c
lab4/wolfram/: test.nb
lab5/: CMakeLists.txt  main.c
lab5/lib/: CMakeLists.txt  process_image.c  process_image.h  process_image.s
lab5/lib/asm/: invert_image.s
lab5/lib/c/: invert_image.c
lab5/lib/impl/: process_image.c
tmp/: main.c
tmp/lib/: CMakeLists.txt
